--- a/isa-top.1
+++ b/isa-top.1
@@ -1,4 +1,4 @@
-.TH ISA-TOP "application for obtaining network traffic statistics "
+.TH ISA-TOP "Application for obtaining network traffic statistics "
 .SH NAME
 isa-top \- Display information about network statistics
 
